--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,5 +30,5 @@ jobs:
             dep ensure
         fi
 
-    - name: Build
-      run: go build -v .
+    - name: Build Bot
+      run: go build -v ./cmd/bot
